--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   </head>
   <body>
     <header>
-      <h1>Portafolio de Alberto Isaac</h1>
+      <h1>Alberto Isaac</h1>
     </header>
     <nav>
       <ul>
-        <li><a href="#sobre-mi">Sobre mí</a></li>
+        <li><a href="#INFO">Sobre Albetro Isaac</a></li>
         <li><a href="#trabajos">Trabajos</a></li>
       </ul>
     </nav>
     <main>
-      <section id="sobre-mi">
-        <h2>Sobre mí</h2>
+      <section id="INFO">
+        <h2>Sobre Alberto isaac</h2>
         <p>Alberto Isaac es un director de cine mexicano nacido en Ciudad de México en 1926. Es conocido por su trabajo en películas como <em>Los Cachorros</em> (1973), <em>Cucaracha</em> (1959) y <em>El rincón de las vírgenes</em> (1972).</p>
         <p>Isaac comenzó su carrera en el cine como asistente de dirección de Luis Buñuel en la película <em>Los Olvidados</em> (1950). Posteriormente, dirigió varias películas para la televisión mexicana antes de debutar en el cine con <em>Cucaracha</em> en 1959. A lo largo de su carrera, también se desempeñó como guionista y productor.</p>
       </section>
@@ -36,7 +36,7 @@
       </section>
     </main>
     <footer>
-      <p>Derechos reservados © Alberto Isaac 2023</p>
+      <p>Echo por Lula Studios</p>
     </footer>
   </body>
 </html>
